@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2010, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -34,7 +34,7 @@ public class Bug6653944 {
     private static int errorCount = 0;
 
     public static void main(String[] args) throws Exception {
-        Calendar buddhist = Calendar.getInstance(new Locale("th", "TH"));
+        Calendar buddhist = Calendar.getInstance(Locale.of("th", "TH"));
         int expectedYear = buddhist.get(Calendar.YEAR);
 
         Calendar deserialized = (Calendar) deserialize(serialize(buddhist));
